<?xml version="1.0"?>
<package>
  <name>terabot_gazebo</name>
  <version>1.0.0</version>
  <description>The terabot_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>

  <license>BSD</license>



  <!-- <url type="website">http://wiki.ros.org/terabot_gazebo</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>terabot_control</build_depend>
  <build_depend>terabot_description</build_depend>
  <run_depend>terabot_control</run_depend>
  <run_depend>terabot_description</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
