<?xml version="1.0"?>
<package>
  <name>terabot_sim</name>
  <version>1.0.0</version>
  <description>The terabot_sim package</description>

 
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/terabot_control</url> -->


  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>terabot_gazebo</run_depend>
  <run_depend>terabot_control</run_depend>

  <export><metapackage/></export>
</package>
